--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <header class="nav">
   <div class="brand">
-    <div class="logo" aria-hidden="true"></div>
+    <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="Obsidian Autoworks Logo" height="50"></a></div>
     <div>
       <div class="name">Obsidian Autoworks</div>
       <div class="tagline">Wraps • Detailing • Performance • St. Ann, Jamaica</div>
