--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://www.example.com">
   <meta property="og:image" content="https://www.example.com/assets/img/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="icon" href="assets/img/favicon.png">
+  <link rel="icon" href="assets/img/favicon.jpg">
   <link rel="stylesheet" href="assets/css/style.css">
   <script type="application/ld+json">
   {"@context": "https://schema.org", "@type": "AutoDetailing", "name": "Obsidian Autoworks", "image": "https://www.example.com/assets/img/og-image.png", "address": {"@type": "PostalAddress", "addressLocality": "St. Ann", "addressCountry": "JM"}, "areaServed": "Jamaica", "telephone": "+1-876-000-0000", "url": "https://www.example.com", "priceRange": "$$", "sameAs": ["https://www.instagram.com/obsidian.autoworks"]}
