--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://www.example.com">
   <meta property="og:image" content="https://www.example.com/assets/img/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="icon" href="assets/img/favicon.jpg">
+  <link rel="icon" href="assets/img/favicon.png">
   <link rel="stylesheet" href="assets/css/style.css">
   <script type="application/ld+json">
   {"@context": "https://schema.org", "@type": "AutoDetailing", "name": "Obsidian Autoworks", "image": "https://www.example.com/assets/img/og-image.png", "address": {"@type": "PostalAddress", "addressLocality": "St. Ann", "addressCountry": "JM"}, "areaServed": "Jamaica", "telephone": "+1-876-000-0000", "url": "https://www.example.com", "priceRange": "$$", "sameAs": ["https://www.instagram.com/obsidian.autoworks"]}
@@ -20,7 +20,7 @@
 <body>
 <header class="nav">
   <div class="brand">
-    <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="favicon.jpg" height="50"></a></div>
+    <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="favicon.png" height="50"></a></div>
     <div>
       <div class="name">Obsidian Autoworks</div>
       <div class="tagline">Wraps • Detailing • Performance • St. Ann, Jamaica</div>
@@ -46,7 +46,7 @@
       <div class="cta" style="margin-top:14px">
         <a class="btn" href="services.html">Explore Services</a>
         <a class="btn ghost" href="gallery.html">View Gallery</a>
-        <button class="btn" data-wa="+1-876-000-0000">WhatsApp Booking</button>
+        <button class="btn" data-wa="+1-876-238-8032">WhatsApp Booking</button>
       </div>
       <div class="kpis">
         <div class="kpi"><strong>100+ </strong><br><span class="tagline">Happy clients</span></div>
@@ -102,7 +102,7 @@
       <div>
         <div class="cta">
           <a class="btn" href="contact.html">Book Now</a>
-          <button class="btn ghost" data-wa="+1-876-000-0000">WhatsApp</button>
+          <button class="btn ghost" data-wa="+1-876-238-8032">WhatsApp</button>
         </div>
       </div>
     </div>
