--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
     <div class="gallery">
       <div class="tile">Project 1</div>
 <div class="/assets/img/work2">Project 2</div>
-<div class="tile">Project 3</div>
+<img src="assets/img/work1.jpg" alt="Custom Wrap Project">
 <div class="tile">Project 4</div>
 <div class="tile">Project 5</div>
 <div class="tile">Project 6</div>
