--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
     <p class="tagline">Project highlights — placeholders below (swap in your photos).</p>
     <div class="gallery">
       <div class="tile">Project 1</div>
-<div class="work1.jpg">Project 2</div>
+<div class="tile">work1.jpg</div>
 <div class="tile">Project 3</div>
 <div class="tile">Project 4</div>
 <div class="tile">Project 5</div>
