--- a/gallery.html
+++ b/gallery.html
@@ -42,15 +42,15 @@
     <h1>Gallery</h1>
     <p class="tagline">Project highlights — placeholders below (swap in your photos).</p>
     <div class="gallery">
-      <div class="tile">Project 1</div>
+      <img src="assets/img/work1.jpg" alt="">
 <img src="assets/img/work2.jpg" alt="">
-<div class="tile">Project 3</div>
-<div class="tile">Project 4</div>
-<div class="tile">Project 5</div>
-<div class="tile">Project 6</div>
-<div class="tile">Project 7</div>
-<div class="tile">Project 8</div>
-<div class="tile">Project 9</div>
+<img src="assets/img/work3.jpg" alt="">
+<img src="assets/img/work4.jpg" alt="">
+<img src="assets/img/work5.jpg" alt="">
+<img src="assets/img/work6.jpg" alt="">
+<img src="assets/img/work7.jpg" alt="">
+<img src="assets/img/work8.jpg" alt="">
+<img src="assets/img/work9.jpg" alt="">
     </div>
     <div class="notice" style="margin-top:16px">
       Replace these tiles with your images: put JPG/PNG files in <code>/assets/img/</code> and update this page.
