--- a/gallery.html
+++ b/gallery.html
@@ -20,8 +20,7 @@
 <body>
 <header class="nav">
   <div class="brand">
-    <div class="logo" aria-hidden="true"></div>
-    <div>
+    <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="" height="50"></a></div>
       <div class="name">Obsidian Autoworks</div>
       <div class="tagline">Wraps • Detailing • Performance • St. Ann, Jamaica</div>
     </div>
@@ -40,7 +39,7 @@
 <section class="section">
   <div class="container">
     <h1>Gallery</h1>
-    <p class="tagline">Project highlights — placeholders below (swap in your photos).</p>
+    <p class="tagline"> Previous work highlights </p>
     <div class="gallery">
       <img src="assets/img/work1.jpg" alt="">
 <img src="assets/img/work2.jpg" alt="">
@@ -53,7 +52,7 @@
 <img src="assets/img/work9.jpg" alt="">
     </div>
     <div class="notice" style="margin-top:16px">
-      Replace these tiles with your images: put JPG/PNG files in <code>/assets/img/</code> and update this page.
+      
     </div>
   </div>
 </section>
