--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header class="nav">
   <div class="brand">
     <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="favicon.png" height="50"></a></div>
-    <div>
+    <div><img src="assets/img/og-image.jpg" alt="Showcase" style="width:100%; height:auto;">
       <div class="name">Obsidian Autoworks</div>
       <div class="tagline">Wraps • Detailing • Performance • St. Ann, Jamaica</div>
     </div>
