--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 <header class="nav">
-  <div class="brand">
+  <div class="<img src="assets/img/og-image.jpg" alt="Showcase" style="width:100%; height:auto;">
     <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="favicon.png" height="50"></a></div>
-    <div><img src="assets/img/og-image.jpg" alt="Showcase" style="width:100%; height:auto;">
+    <div>
       <div class="name">Obsidian Autoworks</div>
       <div class="tagline">Wraps • Detailing • Performance • St. Ann, Jamaica</div>
     </div>
