--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <header class="nav">
-  <div class="<img src="assets/img/og-image.jpg" alt="Showcase" style="width:100%; height:auto;">
+  <div class="">
     <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="favicon.png" height="50"></a></div>
     <div>
       <div class="name">Obsidian Autoworks</div>
@@ -35,7 +35,7 @@
       <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
   </nav>
-</header>
+</header><img src="assets/img/og-image.jpg" alt="Showcase" style="width:100%; height:auto;">
 
 <section class="hero">
   <div class="container grid-2 hero grid">
