--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
   </nav>
-</header><img src="assets/img/og-image.jpg" alt="Showcase" style="width:100%; height:auto;">
-
+</header>
+<img src="assets/img/og-image.jpg" alt="Showcase" style="width:100%; height:auto;">
 <section class="hero">
   <div class="container grid-2 hero grid">
     <div class="card">
