--- a/services.html
+++ b/services.html
@@ -14,13 +14,13 @@
   <link rel="icon" href="assets/img/favicon.png">
   <link rel="stylesheet" href="assets/css/style.css">
   <script type="application/ld+json">
-  {"@context": "https://schema.org", "@type": "AutoDetailing", "name": "Obsidian Autoworks", "image": "https://www.example.com/assets/img/og-image.png", "address": {"@type": "PostalAddress", "addressLocality": "St. Ann", "addressCountry": "JM"}, "areaServed": "Jamaica", "telephone": "+1-876-000-0000", "url": "https://www.example.com", "priceRange": "$$", "sameAs": ["https://www.instagram.com/obsidian.autoworks"]}
+  {"@context": "https://schema.org", "@type": "AutoDetailing", "name": "Obsidian Autoworks", "image": "https://www.example.com/assets/img/og-image.png", "address": {"@type": "PostalAddress", "addressLocality": "St. Ann", "addressCountry": "JM"}, "areaServed": "Jamaica", "telephone": "+1-876-238-8032", "url": "https://www.example.com", "priceRange": "$$", "sameAs": ["https://www.instagram.com/obsidian.autoworks"]}
   </script>
 </head>
 <body>
 <header class="nav">
-  <div class="brand">
-    <div class="logo" aria-hidden="true"></div>
+  <div class="">
+    <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="Obsidian Autoworks Logo" height="50"></a></div>
     <div>
       <div class="name">Obsidian Autoworks</div>
       <div class="tagline">Wraps • Detailing • Performance • St. Ann, Jamaica</div>
@@ -50,22 +50,22 @@
       <div class="service">
         <h3>Paint Correction</h3>
         <p>Single or multi-stage machine polish to remove swirls and haze.</p>
-        <p><strong>From JMD $35,000</strong></p>
+        <p><strong>From JMD $25,000</strong></p>
       </div>
       <div class="service">
         <h3>Ceramic Coating</h3>
         <p>2–5 year protection. Hydrophobic, glossy, easier washing.</p>
-        <p><strong>From JMD $85,000</strong></p>
+        <p><strong>From JMD $55,000</strong></p>
       </div>
       <div class="service">
         <h3>Headlight Restoration</h3>
         <p>Wet-sand, polish, and UV-seal for clarity and safety.</p>
-        <p><strong>From JMD $9,500</strong></p>
+        <p><strong>From JMD $6,500</strong></p>
       </div>
       <div class="service">
         <h3>Engine Bay Detailing</h3>
         <p>Degrease, dress, and protect — fresh look under the hood.</p>
-        <p><strong>From JMD $12,000</strong></p>
+        <p><strong>From JMD $5,000</strong></p>
       </div>
       <div class="service">
         <h3>Vinyl Wraps</h3>
@@ -78,7 +78,7 @@
     </div>
     <div class="cta" style="margin-top:14px">
       <a href="contact.html" class="btn">Get a Quote</a>
-      <button class="btn ghost" data-wa="+1-876-000-0000">Chat on WhatsApp</button>
+      <button class="btn ghost" data-wa="+1-876-238-8032">Chat on WhatsApp</button>
     </div>
   </div>
 </section>
@@ -94,7 +94,7 @@
       <div>
         <div class="cta">
           <a class="btn" href="contact.html">Book Now</a>
-          <button class="btn ghost" data-wa="+1-876-000-0000">WhatsApp</button>
+          <button class="btn ghost" data-wa="+1-876-238-8032">WhatsApp</button>
         </div>
       </div>
     </div>
