--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
 </head>
 <body>
 <header class="nav">
-  <div class="brand">
-    <div class="logo" aria-hidden="true"></div>
+  <div class="">
+    <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="Obsidian Autoworks Logo" height="50"></a></div>
     <div>
       <div class="name">Obsidian Autoworks</div>
       <div class="tagline">Wraps • Detailing • Performance • St. Ann, Jamaica</div>
@@ -71,7 +71,7 @@
       <div>
         <div class="cta">
           <a class="btn" href="contact.html">Book Now</a>
-          <button class="btn ghost" data-wa="+1-876-000-0000">WhatsApp</button>
+          <button class="btn ghost" data-wa="+1-876-238-8032">WhatsApp</button>
         </div>
       </div>
     </div>
