--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <header class="nav">
-  <div class="brand">
+  <div class=">
     <div class="logo"><a href="index.html"><img src="assets/img/favicon.png" alt="" height="50"></a></div>
       <div class="name">Obsidian Autoworks</div>
       <div class="tagline">Wraps • Detailing • Performance • St. Ann, Jamaica</div>
